<resources>
    <string name="app_name">新闻客户端</string>
    <string name="zi_xun">资讯</string>
    <string name="she_hui">社会</string>
    <string name="jun_shi">军事</string>
    <string name="news">新闻</string>
    <string name="news_s">NEWS</string>
    <string name="favorite">收藏</string>
    <string name="favorite_s">FAVORITE</string>
    <string name="local">本地</string>
    <string name="local_s">LOCAL</string>
    <string name="comment">跟帖</string>
    <string name="comment_s">COMMENT</string>
    <string name="photo">图片</string>
    <string name="photo_s">PHOTO</string>
    <string name="login">立即登录</string>
    <string name="versions">更新版本</string>
    <string name="login_fragment">用户登录</string>
    <string name="zhuce_fragment">用户注册</string>
    <string name="pupu_one">设置您的靓照</string>
    <string name="pupu_two">调用相机拍照</string>
    <string name="pupu_three">从照片库中选择</string>
    <string name="yong_hu">请输入用户昵称</string>
    <string name="login_one">注册</string>
    <string name="login_two">忘记密码</string>
    <string name="login_three">登录</string>
    <string name="mi_ma">密码：6到16位个字符</string>
    <string name="zhuce_one">请输入邮箱地址</string>
    <string name="zhuce_two">请输入昵称</string>
    <string name="zhuce_three">立即注册</string>
    <string name="zhuce_four">我同意"服务条款"和"网络用户隐私保护和个人信息利用政策"</string>
    <string name="mima_one">输入注册时的邮箱号</string>
    <string name="mima_two">确认</string>
    <string name="center_one">跟帖数统计:</string>
    <string name="center_login">登陆日至</string>
    <string name="center_two">退出登录</string>
    <string name="login_zhongxin">用户中心</string>
    <string name="web">跟帖</string>
    <string name="web_shoucang">加入收藏</string>
    <string name="delete_shoucang">取消收藏</string>
    <string name="web_qq">分享到QQ</string>
    <string name="web_weixin">分享到微信</string>
    <string name="delete">删除</string>
    <string name="comment_text">评论</string>
    <string name="comment_one">写评论</string>
    <string name="login_jifeng">积分:0</string>
</resources>
