<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/darker_gray"
    android:orientation="vertical"
    android:focusable="true"

    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/pupu_one"
        android:textColor="#000000"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/txt_camera"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:clickable="true"
        android:drawableLeft="@mipmap/photo_take"

        android:gravity="center"
        android:text="@string/pupu_two"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txt_picket"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:drawableLeft="@mipmap/photo_sel"
        android:gravity="center"
        android:text="@string/pupu_three"
        android:textColor="#000000"
        android:textSize="20sp" />

</LinearLayout>