<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/holo_red_dark"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_login_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/login_zhongxin"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:background="@mipmap/center_top_bg"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_center_login"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:src="@mipmap/psb" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="140dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_centerLogin_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txt_jifen_login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="20dp"
                android:text="@string/login_jifeng"
                android:textColor="#000000"
                android:textSize="25sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/txt_num_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:text="@string/center_one" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:gravity="center_vertical"
        android:text="@string/center_login" />

    <ListView
        android:id="@+id/lst_center_login"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_weight="1"></ListView>

    <Button
        android:id="@+id/btn_out"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/center_two" />
</LinearLayout>